# Fnk0085-smart-car

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  protocol.md
.github/workflows/: build-backend.yml
backend/: .gitignore  Cargo.toml  build.rs
backend/certs/: README.md
backend/src/: config.rs  crypto.rs  device.rs  main.rs  protocol.rs  state.rs  static_files.rs  udp_listener.rs  video_cache.rs
backend/src/handlers/: auth.rs  control.rs  device_api.rs  devices.rs  frame.rs  mod.rs  photo.rs  provisioning.rs  pwm_cache.rs  stream.rs  telemetry.rs
firmware/Fnk0085-smart-car/: Fnk0085-smart-car.ino  camera_pins.h
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  App.vue  main.ts  sw.ts  vite-env.d.ts
frontend/src/components/: ConfigDialog.tsx  ConfigDialog.vue  ControlPanel.tsx  ControlPanel.vue  DeviceSelect.tsx  DeviceSelect.vue  LoginView.vue  PadButton.vue  PhotoButton.tsx  PhotoButton.vue  Section.vue  VideoStream.tsx  VideoStream.vue
frontend/src/composables/: useDevices.ts  useKeyboard.ts  useWebSerial.ts
frontend/src/hooks/: useDevices.ts  useKeyboard.ts  useWebSerial.ts
frontend/src/lib/: api.ts  auth.ts  constants.ts  validate.ts
frontend/src/styles/: index.css
frontend/src/types/: protocol.ts
frontend/src/workers/: videoWorker.ts
tests/: report.md  results.txt  ui_smoke.py
